fdo#77209: Share string pool with clip documents.

We do the same with undo documents, and it will only make sense to do
the same with clip documents as well.  Also, put the sharing part into
a common method (for ease of tracking).

Change-Id: I342b22d95374ee06d16318a66ffea0ac5b42621c